--- a/src/main/webapp/css/member.css
+++ b/src/main/webapp/css/member.css
@@ -1,82 +1,83 @@
-html, body {
-    height: 100%;
+body, html {
     margin: 0;
     padding: 0;
-    font-family: 'NanumSquareRound', sans-serif !important;
-    background-color: #e3f2fd !important;
+    width: 100%;
+    height: 100%;
 }
 
-.body-ov {
+.cont {
+    display: inline-flex;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.image-section {
+    flex: 1.3;
     overflow: hidden;
 }
 
-body {
+.image-section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.form-section {
+    flex: 1;
+    padding: 70px;
     display: flex;
     flex-direction: column;
-}
-
-main {
-    flex: 1;
-    display: flex;
     justify-content: center;
-    align-items: center;
 }
 
-.card {
-    width: 100%;
-    border-radius: 20px !important;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: white;
+.form-section img {
+    display: block;
+    margin: 0 auto 20px;
+    max-width: 45px;
+    height: auto;
 }
 
-.card-login {
-    max-width: 430px !important;
-}
-
-.card-signup {
-    max-width: 620px;
-}
-
-.card-body {
-    padding: 30px !important;
-}
-
-.card-title {
-    font-size: 1.8rem;
-    font-weight: bold !important;
-    color: #0d47a1 !important;
+h2 {
     text-align: center;
-    margin-bottom: 20px !important;
-}
-
-/* 입력 필드란 */
-.form-control {
-    border-radius: 8px;
-    border: 1px solid #bbdefb;
-    background-color: #f1f8ff;
-    padding: 12px;
-}
-
-.btn-primary {
-    background-color: #64b5f6 !important;
-    border: none;
-    padding: 12px;
-    font-size: 16px;
-    border-radius: 8px;
-    margin-top: 15px !important;
-}
-
-.btn-primary:hover {
-    background-color: #42a5f5 !important;
-}
-
-/* sign up, login 텍스트 링크 */
-.text-primary {
-    color: #1976d2 !important;
+    margin-bottom: 30px;
     font-weight: bold;
 }
 
-.text-primary:hover {
-    color: #0d47a1;
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    color: #555454;
+    margin-bottom: 7px;
+}
+
+input.form-control {
+    background-color: #fbfbfb;
+    border: 0.7px solid #dbdddf;
+    border-radius: 4px;
+    padding: 10px;
+}
+
+.btn-primary {
+    background-color: #985DFF;
+    border-color: #985DFF;
+    margin-top: 20px;
+    height: 3rem;
+}
+
+.btn-primary:hover {
+    background-color: #6500ff;
+    border-color: #6500ff;
+}
+
+.text-center a {
+    color: #985DFF;
+    text-decoration: underline;
+}
+
+.text-center a:hover {
     text-decoration: underline;
 }
