--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -1,28 +1,51 @@
-#header {
-    width: 100%;
-    background-color: #ffffff;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    font-family: 'NanumSquareRound', sans-serif !important;
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 3rem;
+    margin-top: 17px;
+    background-color: transparent;
 }
 
-/* 로고 문구(링크) */
-#header a {
-    color: #0d47a1;
+/* logo */
+header .logo {
+    max-width: 50px;
+    height: auto;
+    box-shadow: none;
+    filter: none;
+}
+
+.logo-cont {
+    width: 110px;
+}
+
+header .nav {
+    display: flex;
+    gap: 170px;
+}
+
+header .nav .nav-link {
+    font-size: 1rem;
+    color: #000;
     text-decoration: none;
-    font-weight: bold;
 }
 
-#header a:hover {
-    color: #1976d2;
+header .nav .nav-link:hover {
+    text-decoration: underline;
 }
 
-/* sign up 버튼 */
-.btn-primary {
-    background-color: #64b5f6 !important;
+/* button */
+header .btn {
+    font-size: 1rem;
+    border-radius: 20px;
+    width: 110px;
+    background-color: #985DFF;
+    color: white !important;
     border: none;
-    color: white;
+    padding: 0.5rem 1rem;
 }
 
-.btn-primary:hover {
-    background-color: #42a5f5 !important;
+header .btn:hover,
+header .btn:active {
+    background-color: #B18CFF !important;
 }
